fix language select mobile layout bug

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+.nav.navbar-language > li > a {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
 .slide-nav #nav {
   position: fixed;
 }
